<resources>
    <string name="app_name">Class Packet</string>

    <string name="submit_button">Register</string>
    <string name="back_button">Sign Up</string>
    <string name="login_button">Login</string>
    <string name="reg_back_button">Back</string>

    <string name="first_name">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign Up!</string>

    <string name="about_title">About</string>
    <string name="faq_title">FAQ</string>

    <string name="faq_question1">1. What is the purpose of DALOY?</string>
    <string name="faq_question2">2. How do we use the application?</string>
    <string name="faq_question3">3. Is there an in app-purchases in the application?</string>
    <string name="faq_question4">4. How to contact the water suppliers?</string>
    <string name="faq_question5">5. What services your app offering?</string>

    <string name="faq_answer1">To help the user monitor and control the water flow and consumption and provide an analytics wherein they can efficiently use the water.</string>
    <string name="faq_answer2">By registerting your account first, you can go to our dashboard and see the different features integrated with the app</string>
    <string name="faq_answer3">There is no in app-purchases in the application.</string>
    <string name="faq_answer4">MWSS Regulatory Office Katipunan Avenue, corner H. Ventura Street, Barangay Pansol, Balara, Quezon City 1105(02) 8926–9284 mwssregulatoryoffice@ro.mwss.gov.phro.mwss.gov.ph facebook.com/MWSS.RO@mwss.ro</string>
    <string name="faq_answer5">The Daloy application offers a real time information about the water consumption of the users,
        as well as the budget consumed in the process.We also offer a control that will automatically close the valve near the
        water meter, limit the daily water consumption and increase or decrease mechanism of water flow.
        The Daloy application also provides a user-friendly and easy to navigate UI that will surely peek your attention.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ipactivity">IPActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>