<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context="com.example.classpacket.LoginActivity.login.LoginFragment">

    <data>
        <variable
            name="myLoginViewModel"
            type="com.example.classpacket.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:src="@drawable/classpacket_logo" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.daloy.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={myLoginViewModel.inputUsername}"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                style="@style/Widget.daloy.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={myLoginViewModel.inputPassword}"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next_button"
                    style="@style/Widget.daloy.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->myLoginViewModel.loginButton()}"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/login_text" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button"
                    style="@style/Widget.daloy.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_toStartOf="@id/next_button"
                    android:layout_toLeftOf="@id/next_button"
                    android:onClick="@{()->myLoginViewModel.signUP()}"
                    android:text="@string/back_button" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</layout>